--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.ch.jiandou"
         minSdkVersion 22
         targetSdkVersion 28
-        versionCode 35
-        versionName "3.5"
+        versionCode 37
+        versionName "3.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -63,10 +63,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
-//    implementation 'com.android.support:design:28.0.0'
+    //    implementation 'com.android.support:design:28.0.0'
     // leancloud start
     implementation('cn.leancloud:storage-android:6.1.1') {
         exclude group: 'com.alibaba', module: 'fastjson'
@@ -81,17 +79,27 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'cn.com.riversoft:weixin-pay:0.9.8'
-//    implementation files('libs/umeng-analytics-8.1.4.jar')
-//    implementation files('libs/umeng-common-2.1.8.jar')
-//    implementation files('libs/umeng-share-core-6.9.6.jar')
-//    implementation files('libs/umeng-sharetool-6.9.6.jar')
-//    implementation files('libs/umeng-share-QQ-simplify-6.9.6.jar')
-//    implementation files('libs/umeng-share-sina-simplify-6.9.6.jar')
-//    implementation files('libs/umeng-share-wechat-simplify-6.9.6.jar')
-//    implementation files('libs/umeng-shareboard-widget-6.9.6.jar')
+    //    implementation files('libs/umeng-analytics-8.1.4.jar')
+    //    implementation files('libs/umeng-common-2.1.8.jar')
+    //    implementation files('libs/umeng-share-core-6.9.6.jar')
+    //    implementation files('libs/umeng-sharetool-6.9.6.jar')
+    //    implementation files('libs/umeng-share-QQ-simplify-6.9.6.jar')
+    //    implementation files('libs/umeng-share-sina-simplify-6.9.6.jar')
+    //    implementation files('libs/umeng-share-wechat-simplify-6.9.6.jar')
+    //    implementation files('libs/umeng-shareboard-widget-6.9.6.jar')
     implementation 'com.tencent.bugly:crashreport:2.6.6.1'
     implementation 'com.sf.andlibrary:sf-appupdater-sdk:2.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.blankj:utilcodex:1.30.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
+//    implementation 'com.github.xuexiangjys:XUI:1.1.8'
+    //    implementation 'com.qmuiteam:qmui:2.0.0-alpha10'
+
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
+//    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
 }
