--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,63 +27,60 @@
         android:persistent="true"
         android:roundIcon="@drawable/money"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        android:usesCleartextTraffic="true"
-        >
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name="com.ch.activity.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:name="com.ch.activity.MainActivity2"
+            android:label="@string/title_activity_main"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_main">
+            >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.ch.activity.EditTaskActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.ch.activity.TaskTypeListActivity"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.ch.activity.EditTaskActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ch.activity.TaskTypeListActivity"
-            android:screenOrientation="portrait"/>
-
-        <!--友盟分享开始-->
-        <!--微博-->
+        <!-- 友盟分享开始 -->
+        <!-- 微博 -->
         <activity
             android:name="com.umeng.socialize.media.WBShareCallBackActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:exported="false"
-            >
-        </activity>
-        <activity android:name="com.sina.weibo.sdk.web.WeiboSdkWebActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+        <activity
+            android:name="com.sina.weibo.sdk.web.WeiboSdkWebActivity"
             android:configChanges="keyboardHidden|orientation"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize"
-            >
-
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+            android:name="com.sina.weibo.sdk.share.WbShareTransActivity"
             android:launchMode="singleTask"
-            android:name="com.sina.weibo.sdk.share.WbShareTransActivity">
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!--微信-->
+        <!-- 微信 -->
         <activity
-            android:name="com.ch.jixieshou.wxapi.WXEntryActivity"
+            android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <!--QQ-->
+        <!-- QQ -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
-            android:noHistory="true" >
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -95,25 +92,30 @@
         </activity>
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name="com.ch.floatwindow.FloatActivity" />
-        <!--友盟分享结束-->
+        <!-- 友盟分享结束 -->
 
         <service
             android:name="com.ch.core.service.MyAccessbilityService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:accessibilityFlags="flagReportViewIds">
+            android:accessibilityFlags="flagReportViewIds"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
 
                 <!-- android:name必须是以下这个名字 -->
-                <action android:name="android.accessibilityservice.AccessibilityService"></action>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
 
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility" />
         </service>
+
+        <activity
+            android:name="com.ch.activity.MainActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_main2"></activity>
     </application>
 
 </manifest>
