--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,7 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_main2"></activity>
         <activity android:name="com.ch.activity.HelpDocumentActivity" />
+        <activity android:name="com.ch.activity.SetRecommendCodeActivity" />
     </application>
 
 </manifest>
