--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,6 @@ dependencies {
 //    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
+//    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+//    compile 'com.github.lecho:hellocharts-android:v1.5.8'
 }
