--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,10 @@ android {
         applicationId "com.ch.jiandou"
         minSdkVersion 22
         targetSdkVersion 28
-        versionCode 42
-        versionName "4.2"
+        versionCode 45
+        versionName "4.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        multiDexEnabled true
     }
 
     signingConfigs {
@@ -41,6 +42,7 @@ android {
         }
     }
 
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
@@ -66,19 +68,25 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //    implementation 'com.android.support:design:28.0.0'
     // leancloud start
-    implementation('cn.leancloud:storage-android:6.1.1') {
-        exclude group: 'com.alibaba', module: 'fastjson'
-        exclude group: 'org.ligboy.retrofit2', module: 'converter-fastjson'
+//    implementation 'cn.leancloud:storage-android:8.1.1'
+    implementation('cn.leancloud:storage-android:8.1.1') {
+        exclude group : 'com.google.code.gson'
     }
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+//    implementation('cn.leancloud:storage-android:8.1.1') {
+//        exclude group: 'com.alibaba', module: 'fastjson'
+//        exclude group: 'org.ligboy.retrofit2', module: 'converter-fastjson'
+//    }
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.alibaba:fastjson:1.1.71.android'
-    implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+//    implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
     // leancloud end
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup:otto:1.3.8'
-    implementation 'cn.com.riversoft:weixin-pay:0.9.8'
+//    implementation 'cn.com.riversoft:weixin-pay:0.9.8'
     //    implementation files('libs/umeng-analytics-8.1.4.jar')
     //    implementation files('libs/umeng-common-2.1.8.jar')
     //    implementation files('libs/umeng-share-core-6.9.6.jar')
@@ -109,4 +117,6 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+    implementation 'org.apache.commons:commons-io:1.3.2'
+//    implementation 'com.android.support:multidex:1.0.3'
 }
