--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.ch.jiandou"
         minSdkVersion 22
-        targetSdkVersion 28
-        versionCode 45
-        versionName "4.5"
+        targetSdkVersion 30
+        versionCode 46
+        versionName "4.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-//        multiDexEnabled true
     }
 
     signingConfigs {
@@ -66,57 +65,31 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    //    implementation 'com.android.support:design:28.0.0'
-    // leancloud start
-//    implementation 'cn.leancloud:storage-android:8.1.1'
     implementation('cn.leancloud:storage-android:8.1.1') {
         exclude group : 'com.google.code.gson'
     }
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
-//    implementation('cn.leancloud:storage-android:8.1.1') {
-//        exclude group: 'com.alibaba', module: 'fastjson'
-//        exclude group: 'org.ligboy.retrofit2', module: 'converter-fastjson'
-//    }
-//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.alibaba:fastjson:1.1.71.android'
-//    implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
-    // leancloud end
+    implementation 'androidx.preference:preference:1.1.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup:otto:1.3.8'
-//    implementation 'cn.com.riversoft:weixin-pay:0.9.8'
-    //    implementation files('libs/umeng-analytics-8.1.4.jar')
-    //    implementation files('libs/umeng-common-2.1.8.jar')
-    //    implementation files('libs/umeng-share-core-6.9.6.jar')
-    //    implementation files('libs/umeng-sharetool-6.9.6.jar')
-    //    implementation files('libs/umeng-share-QQ-simplify-6.9.6.jar')
-    //    implementation files('libs/umeng-share-sina-simplify-6.9.6.jar')
-    //    implementation files('libs/umeng-share-wechat-simplify-6.9.6.jar')
-    //    implementation files('libs/umeng-shareboard-widget-6.9.6.jar')
     implementation 'com.tencent.bugly:crashreport:2.6.6.1'
     implementation 'com.sf.andlibrary:sf-appupdater-sdk:2.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.blankj:utilcodex:1.30.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
-//    implementation 'com.github.xuexiangjys:XUI:1.1.8'
-    //    implementation 'com.qmuiteam:qmui:2.0.0-alpha10'
-
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
-//    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
-//    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
-//    compile 'com.github.lecho:hellocharts-android:v1.5.8'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
-    // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
     implementation 'org.apache.commons:commons-io:1.3.2'
-//    implementation 'com.android.support:multidex:1.0.3'
 }
