--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,18 @@
 buildscript {
 
     repositories {
-        maven { url 'https://www.jitpack.io' }//关键
         maven {
+            allowInsecureProtocol=true
+            url 'https://www.jitpack.io' }//关键
+        maven {
+            allowInsecureProtocol=true
             url "http://artifactory.sf-express.com/artifactory/maven/"
         }
-        jcenter()
+//        jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "commons-codec:commons-codec:1.11"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,11 +24,14 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://www.jitpack.io' }//关键
         maven {
+            allowInsecureProtocol=true
+            url 'https://www.jitpack.io' }//关键
+        maven {
+            allowInsecureProtocol=true
             url "http://artifactory.sf-express.com/artifactory/maven/"
         }
-        jcenter()
+//        jcenter()
         google()
     }
 }
