--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
 
     defaultConfig {
         applicationId "com.ch.jiandou"
-        minSdkVersion 22
+        minSdkVersion 21
         targetSdkVersion 30
-        versionCode 50
-        versionName "5.0"
+        versionCode 51
+        versionName "5.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -77,7 +77,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.tencent.bugly:crashreport:2.6.6.1'
-    implementation 'com.sf.andlibrary:sf-appupdater-sdk:2.0.0'
+    implementation ('com.sf.andlibrary:sf-appupdater-sdk:2.0.0'){
+        exclude group: 'com.tencent.tinker', module: 'tinker-android-lib'
+    }
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.blankj:utilcodex:1.30.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
